MID-9298 - Color contrast fixes of nav and bootstrap colors (cyan refused)

--- a/gui/admin-gui/src/frontend/scss/_bootstrap-variables.scss
+++ b/gui/admin-gui/src/frontend/scss/_bootstrap-variables.scss
@@ -7,12 +7,21 @@
 
 // taken from adminlte and bootstrap, also based on figma
 $gray-700: #495057 !default;
-$lightblue: #206F9D !default; //#3c8dbc - primary color //#357DA7 //#307197 - acceptable //#1070A8 - cool saturated lightblue
+$lightblue: #206F9D !default; //#3c8dbc - primary color //#307197 - acceptable //#1070A8 - cool saturated lightblue
+$green: #198754 !default;
+//$cyan: #0dcaf0 !default;
+$yellow: #ffc107 !default;
+$red: #dc3545 !default;
+$purple: #605CA8 !default;
 
 $midpoint-secondary: #818D98 !default;
 
 // override bootstrap defaults where necessary
 $primary: $lightblue;
 $secondary: $midpoint-secondary;
+$success: $green;
+//$info: $cyan;
+$warning: $yellow;
+$danger: $red;
 
 $body-color: $gray-700;
